# OOP_Labs

./: .gitignore
1/: CMakeLists.txt  main.cpp
1/include/: replace.hpp
1/src/: replace.cpp
1/tests/: tests.cpp
2/: CMakeLists.txt  main.cpp
2/include/: array.hpp  decimal.hpp  exceptions.hpp
2/src/: array.cpp  decimal.cpp
2/tests/: tests.cpp
3/: CMakeLists.txt  main.cpp
3/include/: exceptions.hpp  figure.hpp  pentagon.hpp  rhombus.hpp  trapezoid.hpp  vector.hpp
3/src/: figure.cpp  pentagon.cpp  rhombus.cpp  trapezoid.cpp  vector.cpp
3/tests/: tests.cpp
4/: CMakeLists.txt  compile_commands.json  main.cpp
4/examples/: deleter_demo.cpp
4/include/: array.hpp  array.ipp  deleter.hpp  figure.hpp  figure.ipp  rectangle.hpp  rectangle.ipp  rhombus.hpp  rhombus.ipp  trapezoid.hpp  trapezoid.ipp  vector.hpp  vector.ipp
4/src/: deleter.cpp  vector.cpp
4/tests/: tests.cpp
5/: CMakeLists.txt  main.cpp
5/include/: exceptions.hpp  list.hpp  list.ipp  memory_resource.hpp
5/src/: memory_resource.cpp
5/tests/: tests.cpp
6/: .gitignore  CMakeLists.txt  README.md  main.cpp
6/include/: bear.hpp  editor.hpp  exceptions.hpp  knight.hpp  npc.hpp  orc.hpp
6/src/: bear.cpp  factory.cpp  knight.cpp  npc.cpp  orc.cpp
7/: CMakeLists.txt  main.cpp
7/include/: bear.hpp  factory.hpp  game.hpp  knight.hpp  npc.hpp  observer.hpp  orc.hpp  visitor.hpp
7/src/: bear.cpp  editor.cpp  game.cpp  knight.cpp  npc.cpp  observer.cpp  orc.cpp  visitor.cpp
